--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "dasltd.com.creditcardcashback"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -20,10 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.google.android.gms:play-services:8.3.0'
-
+    compile ("com.android.support:support-v4:22.2.0")
+    compile ("com.android.support:appcompat-v7:22.2.0")
+    compile ("com.android.support:support-annotations:22.2.0")
+    compile ("com.android.support:recyclerview-v7:22.2.0")
+    compile ("com.android.support:design:22.2.0")
 }
